--- a/src/index.css
+++ b/src/index.css
@@ -24,11 +24,15 @@ a:hover {
 }
 
 body {
+  width: 100%;
+  height: 100%;
   margin: 0;
   display: flex;
   place-items: center;
+  justify-content: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #494D5F;
 }
 
 h1 {
