--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,12 @@ button:hover {
 }
 button:focus,
 button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  outline: none;
+}
+
+input:focus,
+button:focus-visible {
+  outline: none;
 }
 
 @media (prefers-color-scheme: light) {
